# rust-microservice

./: .gitignore  Makefile  README.md  docker-compose.yaml
analytics/: Cargo.toml  Makefile  README.md  Setup.md  Testing.md  docker-compose.test.yml  docker-compose.yml
analytics/src/: consumer.rs  main.rs  producer.rs
load-balancer/: .env.example  Cargo.toml  Dockerfile  Makefile  Setup.md  Testing.md  nginx.conf
load-balancer/src/: lib.rs  main.rs
monitoring/: Makefile  Setup.md  docker-compose.yml  prometheus.yml
rate-limiter/: .env.example  Cargo.toml  Dockerfile  Makefile  Setup.md  docker-compose.test.yaml  docker-compose.yaml
rate-limiter/src/: lib.rs  main.rs
server-1/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  Setup.md  docker-compose.test.yaml
server-1/src/: header.rs  kafka.rs  main.rs  prom.rs  services.rs
server-2/: .env.example  Cargo.toml  Dockerfile  Makefile  Testing.md  docker-compose.yaml  todo.sql
server-2/src/: main.rs  services.rs
