[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "load_balancer"
# path = "src/lib.rs"

[dependencies]
actix-web = "4.5.1"
clap = "4.5.2"
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = "0.11.25"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
wiremock = "0.6.0"
