[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
reqwest = "0.11.25"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
